--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,6 @@ jobs:
       - name: Create GitHub Release
         uses: trustpair/workflows-backend/.github/actions/create-github-release@main
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ inputs.github_token }}
           tag_name: ${{ steps.version.outputs.tag_name }}
           release_name: "${{ steps.version.outputs.tag_name }}"
