--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
           echo "Generated tag: $VERSION"
 
       - name: Create GitHub Release
-        uses: marcovaccari/qa-workflows/.github/actions/create-github-release/action.yml@main
+        uses: marcovaccari/qa-workflows/.github/actions/create-github-release@main
         with:
           github_token: ${{ inputs.github_token }}
           tag_name: ${{ steps.version.outputs.tag_name }}
