chore: require target_commitish

--- a/.github/actions/create-github-release/action.yml
+++ b/.github/actions/create-github-release/action.yml
@@ -14,8 +14,7 @@ inputs:
     default: ''
   target_commitish:
     description: 'The commitish value that determines where the Git tag is created from'
-    required: false
-    default: 'master'
+    required: true
   prerelease:
     description: 'Whether this is a prerelease'
     required: false
