--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,24 +4,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  create-release:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Read version from VERSION file
-        id: version
-        run: |
-          VERSION=$(cat VERSION | tr -d '\n')
-          echo "tag_name=$VERSION" >> $GITHUB_OUTPUT
-          echo "Read version: $VERSION"
-          echo "Generated tag: $VERSION"
-
-      - name: Create GitHub Release
-        uses: marcovaccari/qa-workflows/.github/actions/create-github-release@main
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          tag_name: ${{ steps.version.outputs.tag_name }}
-          release_name: "${{ steps.version.outputs.tag_name }}"
-          target_commitish: main
+  create-github-release:
+    permissions:
+      contents: read
+    uses: marcovaccari/qa-workflows/.github/workflows/create-gh-release@main
+    with:
+      target: main
+    secrets:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
