--- a/.github/workflows/create-gh-release.yml
+++ b/.github/workflows/create-gh-release.yml
@@ -3,7 +3,7 @@ name: Create GitHub Release
 on:
   workflow_call:
     secrets:
-      GITHUB_TOKEN:
+      gh_token:
         required: true
     inputs:
       target:
@@ -28,7 +28,7 @@ jobs:
       - name: Create GitHub Release
         uses: marcovaccari/qa-workflows/.github/actions/create-github-release@main
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.gh_token }}
           tag_name: ${{ steps.version.outputs.tag_name }}
           release_name: "${{ steps.version.outputs.tag_name }}"
           target: ${{ inputs.target }}
