--- a/.github/actions/create-github-release/action.yml
+++ b/.github/actions/create-github-release/action.yml
@@ -52,6 +52,30 @@ runs:
         fetch-depth: 0
         token: ${{ inputs.github_token }}
 
+    - name: Install GitHub CLI
+      shell: bash
+      run: |
+        # Check if gh is already installed
+        if command -v gh &> /dev/null; then
+          echo "GitHub CLI is already installed"
+          gh --version
+        else
+          echo "Installing GitHub CLI..."
+
+          # Taken from https://github.com/cli/cli/blob/trunk/docs/install_linux.md
+          (type -p wget >/dev/null || (sudo apt update && sudo apt-get install wget -y))
+          sudo mkdir -p -m 755 /etc/apt/keyrings
+          out=$(mktemp) && wget -nv -O$out https://cli.github.com/packages/githubcli-archive-keyring.gpg
+          cat $out | sudo tee /etc/apt/keyrings/githubcli-archive-keyring.gpg > /dev/null
+          sudo chmod go+r /etc/apt/keyrings/githubcli-archive-keyring.gpg
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
+          sudo apt update
+          sudo apt install gh -y
+
+          echo "GitHub CLI installed successfully"
+          gh --version
+        fi
+
     - name: Determine release name
       id: release_info
       shell: bash
